Fix food menu size and join the tribe font-size on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -542,7 +542,7 @@ body{
               
         }
         .swiper-container {
-            width: 80%;
+            width: 75%;
             height: auto;
             cursor: grab;
 
@@ -965,7 +965,7 @@ body{
     
         .tianfoods{
             .swiper-container{
-                width: 90%;
+                width: 80%;
             }
         }
     }
@@ -1006,9 +1006,19 @@ body{
     display: none !important;
 }
 .join-the-tribe{
-    height: 500px;
+    height: 430px;
     background-size: 150%;
     background-position: bottom left;
+    p{
+        font-size: 0.8em;
+    }
+    h3{
+        font-size: 1em;
+    }
+    button{
+        font-size: 0.8em;
+        padding: 0.8em 1.4em;
+    }
 }
    
  .main-footer{
